dropshot/tests/fail/bad_endpoint12.stderr
error[E0277]: the trait bound `String: HttpCodedResponse` is not satisfied
  --> tests/fail/bad_endpoint12.rs:16:6
   |
16 | ) -> Result<String, HttpError> {
   |      ^^^^^^ the trait `HttpCodedResponse` is not implemented for `String`
   |
   = help: the following other types implement trait `HttpCodedResponse`:
             HttpResponseAccepted<T>
             HttpResponseCreated<T>
             HttpResponseDeleted
             HttpResponseFoundNoContent
             HttpResponseOk<T>
             HttpResponseSeeOtherNoContent
             HttpResponseTemporaryRedirectNoContent
             HttpResponseUpdatedNoContent
   = note: required because of the requirements on the impl of `HttpResponse` for `String`
note: required because of the requirements on the impl of `ResultTrait` for `Result<String, HttpError>`
  --> tests/fail/bad_endpoint12.rs:16:6
   |
16 | ) -> Result<String, HttpError> {
   |      ^^^^^^
